--- a/WastelandCourier.uproject
+++ b/WastelandCourier.uproject
@@ -6,7 +6,7 @@
 	"Plugins": [
 		{
 			"Name": "GameAnalytics",
-			"Enabled": true,
+			"Enabled": false,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/d070c3fab7b74c08bab3a89c9cbf4490"
 		},
 		{
